--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -15,12 +15,14 @@
             {% endfor %}
             {% endif %}
         </ul>
-        <ul id="nav-services" class="centered-nav">
-          {% for title, url in SOCIAL %}
-          <li style="display: inline"><a href="{{ url }}" target="{{title}}">
-            <i class="icon-{{ title }} svc-badge icon-2x"></i></a></li>
-          {% endfor %}
-        </ul>
+    </nav>
+    <nav>
+      <ul id="nav-services" class="centered-nav" style="text-align: center">
+        {% for title, url in SOCIAL %}
+        <li style="display: inline"><a href="{{ url }}" target="{{title}}">
+          <i class="icon-{{ title }} svc-badge icon-lg"></i></a></li>
+        {% endfor %}
+      </ul>
     </nav>
     {% include "footer.html" %}
 </header>
